--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xanderfrangos/global-mouse-events.git"
+    "url": "https://github.com/xanderfrangos/global-mouse-events.git"
   },
   "keywords": [
     "mouse-hooks",
