--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "global-mouse-events",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Global mouse events listener for Node.js (Windows only)",
   "main": "index.js",
   "scripts": {
@@ -30,8 +30,8 @@
   "homepage": "https://github.com/xanderfrangos/global-mouse-events#readme",
   "dependencies": {
     "bindings": "1.5.0",
-    "node-gyp": "5.0.2",
-    "node-addon-api": "3.0.0"
+    "node-addon-api": "3.0.0",
+    "node-gyp": "5.0.2"
   },
   "files": [
     "index.js",
@@ -41,5 +41,9 @@
     "LICENSE",
     "example.js",
     "README.md"
-  ]
+  ],
+  "devDependencies": {
+    "@types/node": "^14.14.32",
+    "typescript": "^4.2.3"
+  }
 }
