--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "global-mouse-events",
-  "version": "1.0.7",
-  "description": "Global mouse events listener for Node.js (Windows only)",
-  "main": "index.js",
-  "scripts": {
-    "start": "node example.js",
-    "rebuild": "node-gyp rebuild",
-    "install": "npm run rebuild"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/xanderfrangos/global-mouse-events.git"
-  },
-  "keywords": [
-    "mouse-hooks",
-    "windows",
-    "mouse-events",
-    "mouse",
-    "windows-hooks",
-    "hooks",
-    "global",
-    "node"
-  ],
-  "author": "xanderfrangos",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/xanderfrangos/global-mouse-events/issues"
-  },
-  "homepage": "https://github.com/xanderfrangos/global-mouse-events#readme",
-  "dependencies": {
-    "bindings": "1.5.0",
-    "node-addon-api": "3.1.0",
-    "node-gyp": "7.1.2"
-  },
-  "files": [
-    "index.js",
-    "index.d.ts",
-    "thread.js",
-    "binding.gyp",
-    "global-mouse-events.cc",
-    "LICENSE",
-    "example.js",
-    "README.md"
-  ],
-  "devDependencies": {
-    "@types/node": "^14.14.32",
-    "typescript": "^4.2.3"
-  }
+    "name": "global-mouse-hooks",
+    "version": "1.0.7",
+    "description": "Global mouse events listener for Node.js (Windows only) with prebuilds for napi",
+    "main": "index.js",
+    "scripts": {
+        "start": "node example.js",
+        "rebuild": "node-gyp rebuild",
+        "install": "node-gyp-build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/stasadance/global-mouse-hooks.git"
+    },
+    "keywords": [
+        "mouse-hooks",
+        "windows",
+        "mouse-events",
+        "mouse",
+        "windows-hooks",
+        "hooks",
+        "global",
+        "node"
+    ],
+    "author": "stasadance",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/stasadance/global-mouse-hooks/issues"
+    },
+    "homepage": "https://github.com/stasadance/global-mouse-hooks#readme",
+    "dependencies": {
+        "bindings": "1.5.0",
+        "node-addon-api": "3.1.0",
+        "node-gyp": "7.1.2",
+        "node-gyp-build": "^4.3.0"
+    },
+    "files": [
+        "index.js",
+        "index.d.ts",
+        "thread.js",
+        "binding.gyp",
+        "global-mouse-events.cc",
+        "LICENSE",
+        "example.js",
+        "README.md"
+    ],
+    "devDependencies": {
+        "@types/node": "^14.14.32",
+        "typescript": "^4.2.3"
+    }
 }
